--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,13 +1,8 @@
 
 
-add_executable(if_constexpr if_constexpr.cpp)
-add_test(if_constexpr, if_constexpr)
-
-add_executable(structured_binding structured_binding.cpp)
-add_test(structured_binding, structured_binding)
-
-add_executable(template_auto template_auto.cpp)
-add_test(template_auto, template_auto)
-
-add_executable(if_initializer if_initializer.cpp)
-add_test(if_initializer, if_initializer)
+mk_test(if_constexpr)
+mk_test(structured_binding)
+mk_test(template_auto)
+mk_test(if_initializer)
+mk_test(nested_ns)
+mk_test(fold_expr)
