--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,14 @@
 
-
 mk_test(if_constexpr)
-mk_test(structured_binding)
-mk_test(template_auto)
 mk_test(if_initializer)
 mk_test(nested_ns)
 mk_test(fold_expr)
+mk_test(tuple)
+
+
+compile_fail(structured_binding)
+compile_fail(constexpr_lambda)
+compile_fail(template_auto)
+
+
+
