update to clang 5 (omg!)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,11 +4,13 @@ mk_test(if_initializer)
 mk_test(nested_ns)
 mk_test(fold_expr)
 mk_test(tuple)
+mk_test(structured_binding)
+mk_test(template_auto)
 
-
-compile_fail(structured_binding)
+#compile_fail(structured_binding)
+#compile_fail(template_auto)
 compile_fail(constexpr_lambda)
-compile_fail(template_auto)
+
 
 
 
