brand new constexpr lambda

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,10 +6,11 @@ mk_test(fold_expr)
 mk_test(tuple)
 mk_test(structured_binding)
 mk_test(template_auto)
+mk_test(constexpr_lambda)
 
 #compile_fail(structured_binding)
 #compile_fail(template_auto)
-compile_fail(constexpr_lambda)
+#compile_fail(constexpr_lambda)
 
 
 
